# spiderbot_ik

./: README.md  setup.cfg  setup.py
ik/: package.xml  setup.py
ik/ik/: final_ik_.py  input_noder.py
ik/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ik/install/ik/lib/ik/: final_ik_check  final_ik_node  input_noder  joint_state_bridge
ik/install/ik/share/ik/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
jetson_stm32_poc_msg/: CMakeLists.txt  package.xml
jetson_stm32_poc_msg/msg/: DataVector.msg
placo_gait/: package.xml
placo_gait/placo_gait/: placo_gait_node.py
